--- a/index.html
+++ b/index.html
@@ -28,8 +28,8 @@
 	<div class="panel panel-default">
 	  <div class="panel-heading">Old Package</div>
 	  <div class="panel-body">
-		This is a sample package with minimal information. 
-		It also simulates an old package that's incompatible only with iOS lower than 7.0.<br /><br />
+		This is a simple flat icon for electra1131. Currently only supports multi_path version, 
+		 support for VFS version coming soon<br /><br />
 		<a class="btn btn-xs btn-default" href="depictions/?p=com.supermamon.oldpackage">More info</a>
 	  </div>
 	</div>
