--- a/index.html
+++ b/index.html
@@ -21,15 +21,15 @@
 </div>
 
 <div class="container">
-  <h3 id="wells" class="page-header">Hosted Packages</h3>
+  <h3 id="wells" class="page-header">Hosted Packages and Themes</h3>
 </div>
 
 <div class="container">
 	<div class="panel panel-default">
-	  <div class="panel-heading">Old Package</div>
+	  <div class="panel-heading">Electra Flat Icon</div>
 	  <div class="panel-body">
 		This is a simple flat icon for electra1131. Currently only supports multi_path version, 
-		 support for VFS version coming soon<br /><br />
+		 support for VFS version coming soon.<br /><br />
 		<a class="btn btn-xs btn-default" href="depictions/?p=com.supermamon.oldpackage">More info</a>
 	  </div>
 	</div>
