--- a/index.html
+++ b/index.html
@@ -35,9 +35,9 @@
 	</div>
 	
 	<div class="panel panel-default">
-	  <div class="panel-heading">New Package</div>
+	  <div class="panel-heading">More Stuff</div>
 	  <div class="panel-body">
-		This is a sample package with lots of information.<br /><br />
+		Coming soon!<br /><br />
 		<a class="btn btn-xs btn-default" href="depictions/?p=com.supermamon.newpackage">More info</a>
 	  </div>
 	</div>
