--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 <div class="container">
 	<div class="well">
 		<p><span class="text-primary"><b>CodeRedKillah's Repo</span></b> is my personal repo.</p>
-		<a class="btn btn-sm btn-default" href="cydia://url/https://cydia.saurik.com/api/share#?source=https://supermamon.github.io/Reposi3/">Add to Cydia</a>
+		<a class="btn btn-sm btn-default" href="cydia://url/https://cydia.saurik.com/api/share#?source=https://coderedkillah.github.io/repo/">Add to Cydia</a>
 	</div>
 </div>
 
@@ -35,7 +35,7 @@
 	</div>
 	
 	<div class="panel panel-default">
-	  <div class="panel-heading">More Stuff</div>
+	  <div class="panel-heading">PokeCenterCharging</div>
 	  <div class="panel-body">
 		Coming soon!<br /><br />
 		<a class="btn btn-xs btn-default" href="depictions/?p=com.supermamon.newpackage">More info</a>
