--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
 <div class="container">
 	<div class="well">
-		<p><span class="text-primary"><b>CodeRedKillah's Repo</span></b> is my personal repo.</p>
+		<p><span class="text-primary"><b>CodeRedKillah's Repo</span></b> is my own personal repo.</p>
 		<a class="btn btn-sm btn-default" href="cydia://url/https://cydia.saurik.com/api/share#?source=https://coderedkillah.github.io/repo/">Add to Cydia</a>
 	</div>
 </div>
