--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <title>CodeRedKillah's Repo</title>
+  <title>Peter Pan's Repo</title>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
@@ -10,13 +10,13 @@
 <body>
 
 <div class="container">
-	<h1><img src="CydiaIcon.png"> CodeRedKillah's Repo</h1>
+	<h1><img src="CydiaIcon.png"> Peter Pan's Repo</h1>
 </div>
 
 <div class="container">
 	<div class="well">
-		<p><span class="text-primary"><b>CodeRedKillah's Repo</span></b> is my own personal repo.</p>
-		<a class="btn btn-sm btn-default" href="cydia://url/https://cydia.saurik.com/api/share#?source=https://coderedkillah.github.io/repo/">Add to Cydia</a>
+		<p><span class="text-primary"><b>Peter Pan's Repo</span></b> is my own personal repo.</p>
+		<a class="btn btn-sm btn-default" href="cydia://url/https://cydia.saurik.com/api/share#?source=https://peterpan.github.io/">Add to Cydia</a>
 	</div>
 </div>
 
@@ -26,19 +26,18 @@
 
 <div class="container">
 	<div class="panel panel-default">
-	  <div class="panel-heading">Electra Flat Icon</div>
+	  <div class="panel-heading">Iconic</div>
 	  <div class="panel-body">
-		This is a simple flat icon for electra1131. Currently only supports multi_path version, 
-		 support for VFS version coming soon.<br /><br />
-		<a class="btn btn-xs btn-default" href="depictions/?p=com.supermamon.oldpackage">More info</a>
+		A beautiful colored gradient and transparent theme with over 700 icons.<br /><br />
+		<a class="btn btn-xs btn-default" href="depictions/?p=com.peterpan.iconic">More info</a>
 	  </div>
 	</div>
 	
 	<div class="panel panel-default">
-	  <div class="panel-heading">PokeCenterCharging</div>
+	  <div class="panel-heading">Blacklit</div>
 	  <div class="panel-body">
 		Coming soon!<br /><br />
-		<a class="btn btn-xs btn-default" href="depictions/?p=com.supermamon.newpackage">More info</a>
+		<a class="btn btn-xs btn-default" href="depictions/?p=com.peterpan.blacklit">More info</a>
 	  </div>
 	</div>
 </div>
