--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 <div class="container">
 	<div class="well">
 		<p><span class="text-primary"><b>Peter Pan's Repo</span></b> is my personal repo.</p>
-		<a class="btn btn-sm btn-default" href="cydia://url/https://cydia.saurik.com/api/share#?source=https://peterpan.github.io/repo/">Add to Cydia</a>
+		<a class="btn btn-sm btn-default" href="cydia://url/https://cydia.saurik.com/api/share#?source=https://p3t3rpan.github.io/repo/">Add to Cydia</a>
 	</div>
 </div>
 
