--- a/index.html
+++ b/index.html
@@ -17,7 +17,8 @@
 	<div class="well">
 		<p><span class="text-primary"><b>Peter Pan's Repo</span></b> is my personal repo.</p>
 		<a class="btn btn-sm btn-default" href="cydia://url/https://cydia.saurik.com/api/share#?source=https://p3t3rpan.github.io/repo/">Add to Cydia</a>
-	</div>
+	        <a class="btn btn-sm btn-default" href="sileo://source/https://p3t3rpan.github.io/repo/">Add to Sileo</a>
+        </div>
 </div>
 
 <div class="container">
